--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.5.3",
     "react-scripts": "4.0.3",
+    "short-uuid": "^4.2.0",
+    "styled-components": "^5.2.3",
+    "unstated-next": "^1.1.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
